parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declarations
Rule 2     declarations -> declaration
Rule 3     declarations -> declarations declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> function_declaration
Rule 6     declaration -> statement
Rule 7     var_declaration -> TYPE ID ASSIGN expression SEMICOLON
Rule 8     var_declaration -> TYPE ID LBRACKET NUMBER RBRACKET SEMICOLON
Rule 9     function_declaration -> FUNCTION ID LPAREN param_list RPAREN TYPE block
Rule 10    param_list -> <empty>
Rule 11    param_list -> param_list_not_empty
Rule 12    param_list_not_empty -> param
Rule 13    param_list_not_empty -> param_list_not_empty COMMA param
Rule 14    param -> TYPE ID
Rule 15    block -> LBRACE statements RBRACE
Rule 16    statements -> <empty>
Rule 17    statements -> statement_list
Rule 18    statement_list -> statement
Rule 19    statement_list -> statement_list statement
Rule 20    statement -> var_declaration
Rule 21    statement -> assignment
Rule 22    statement -> if_statement
Rule 23    statement -> while_loop
Rule 24    statement -> for_loop
Rule 25    statement -> function_call SEMICOLON
Rule 26    statement -> return_statement
Rule 27    statement -> output_statement
Rule 28    assignment -> ID ASSIGN expression SEMICOLON
Rule 29    assignment -> array_access ASSIGN expression SEMICOLON
Rule 30    if_statement -> IF expression THEN block END
Rule 31    if_statement -> IF expression THEN block ELSE block END
Rule 32    while_loop -> WHILE expression block
Rule 33    for_loop -> FOR LPAREN assignment expression SEMICOLON assignment RPAREN block
Rule 34    expression -> logical_or
Rule 35    logical_or -> logical_and
Rule 36    logical_or -> logical_or EQUALS logical_and
Rule 37    logical_or -> logical_or NOTEQUALS logical_and
Rule 38    logical_and -> comparison
Rule 39    logical_and -> logical_and GT comparison
Rule 40    logical_and -> logical_and LT comparison
Rule 41    logical_and -> logical_and GTE comparison
Rule 42    logical_and -> logical_and LTE comparison
Rule 43    comparison -> arithmetic
Rule 44    arithmetic -> term
Rule 45    arithmetic -> arithmetic PLUS term
Rule 46    arithmetic -> arithmetic MINUS term
Rule 47    term -> factor
Rule 48    term -> term MULTIPLY factor
Rule 49    term -> term DIVIDE factor
Rule 50    factor -> NUMBER
Rule 51    factor -> STRING
Rule 52    factor -> BOOLEAN
Rule 53    factor -> ID
Rule 54    factor -> array_access
Rule 55    factor -> function_call
Rule 56    factor -> LPAREN expression RPAREN
Rule 57    array_access -> ID LBRACKET expression RBRACKET
Rule 58    function_call -> ID LPAREN arg_list RPAREN
Rule 59    arg_list -> <empty>
Rule 60    arg_list -> arg_list_not_empty
Rule 61    arg_list_not_empty -> expression
Rule 62    arg_list_not_empty -> arg_list_not_empty COMMA expression
Rule 63    return_statement -> RETURN expression SEMICOLON
Rule 64    output_statement -> OUTPUT expression SEMICOLON

Terminals, with rules where they appear

ASSIGN               : 7 28 29
BOOLEAN              : 52
COMMA                : 13 62
DIVIDE               : 49
ELSE                 : 31
END                  : 30 31
EQUALS               : 36
FOR                  : 33
FUNCTION             : 9
GT                   : 39
GTE                  : 41
ID                   : 7 8 9 14 28 53 57 58
IF                   : 30 31
LBRACE               : 15
LBRACKET             : 8 57
LPAREN               : 9 33 56 58
LT                   : 40
LTE                  : 42
MINUS                : 46
MULTIPLY             : 48
NOTEQUALS            : 37
NUMBER               : 8 50
OUTPUT               : 64
PLUS                 : 45
RBRACE               : 15
RBRACKET             : 8 57
RETURN               : 63
RPAREN               : 9 33 56 58
SEMICOLON            : 7 8 25 28 29 33 63 64
STRING               : 51
THEN                 : 30 31
TYPE                 : 7 8 9 14
WHILE                : 32
error                : 

Nonterminals, with rules where they appear

arg_list             : 58
arg_list_not_empty   : 60 62
arithmetic           : 43 45 46
array_access         : 29 54
assignment           : 21 33 33
block                : 9 30 31 31 32 33
comparison           : 38 39 40 41 42
declaration          : 2 3
declarations         : 1 3
expression           : 7 28 29 30 31 32 33 56 57 61 62 63 64
factor               : 47 48 49
for_loop             : 24
function_call        : 25 55
function_declaration : 5
if_statement         : 22
logical_and          : 35 36 37 39 40 41 42
logical_or           : 34 36 37
output_statement     : 27
param                : 12 13
param_list           : 9
param_list_not_empty : 11 13
program              : 0
return_statement     : 26
statement            : 6 18 19
statement_list       : 17 19
statements           : 15
term                 : 44 45 46 48 49
var_declaration      : 4 20
while_loop           : 23

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declarations
    (2) declarations -> . declaration
    (3) declarations -> . declarations declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . function_declaration
    (6) declaration -> . statement
    (7) var_declaration -> . TYPE ID ASSIGN expression SEMICOLON
    (8) var_declaration -> . TYPE ID LBRACKET NUMBER RBRACKET SEMICOLON
    (9) function_declaration -> . FUNCTION ID LPAREN param_list RPAREN TYPE block
    (20) statement -> . var_declaration
    (21) statement -> . assignment
    (22) statement -> . if_statement
    (23) statement -> . while_loop
    (24) statement -> . for_loop
    (25) statement -> . function_call SEMICOLON
    (26) statement -> . return_statement
    (27) statement -> . output_statement
    (28) assignment -> . ID ASSIGN expression SEMICOLON
    (29) assignment -> . array_access ASSIGN expression SEMICOLON
    (30) if_statement -> . IF expression THEN block END
    (31) if_statement -> . IF expression THEN block ELSE block END
    (32) while_loop -> . WHILE expression block
    (33) for_loop -> . FOR LPAREN assignment expression SEMICOLON assignment RPAREN block
    (58) function_call -> . ID LPAREN arg_list RPAREN
    (63) return_statement -> . RETURN expression SEMICOLON
    (64) output_statement -> . OUTPUT expression SEMICOLON
    (57) array_access -> . ID LBRACKET expression RBRACKET

    TYPE            shift and go to state 7
    FUNCTION        shift and go to state 9
    ID              shift and go to state 8
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    FOR             shift and go to state 20
    RETURN          shift and go to state 21
    OUTPUT          shift and go to state 22

    program                        shift and go to state 1
    declarations                   shift and go to state 2
    declaration                    shift and go to state 3
    var_declaration                shift and go to state 4
    function_declaration           shift and go to state 5
    statement                      shift and go to state 6
    assignment                     shift and go to state 10
    if_statement                   shift and go to state 11
    while_loop                     shift and go to state 12
    for_loop                       shift and go to state 13
    function_call                  shift and go to state 14
    return_statement               shift and go to state 15
    output_statement               shift and go to state 16
    array_access                   shift and go to state 17

state 1

    (0) S' -> program .



state 2

    (1) program -> declarations .
    (3) declarations -> declarations . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . function_declaration
    (6) declaration -> . statement
    (7) var_declaration -> . TYPE ID ASSIGN expression SEMICOLON
    (8) var_declaration -> . TYPE ID LBRACKET NUMBER RBRACKET SEMICOLON
    (9) function_declaration -> . FUNCTION ID LPAREN param_list RPAREN TYPE block
    (20) statement -> . var_declaration
    (21) statement -> . assignment
    (22) statement -> . if_statement
    (23) statement -> . while_loop
    (24) statement -> . for_loop
    (25) statement -> . function_call SEMICOLON
    (26) statement -> . return_statement
    (27) statement -> . output_statement
    (28) assignment -> . ID ASSIGN expression SEMICOLON
    (29) assignment -> . array_access ASSIGN expression SEMICOLON
    (30) if_statement -> . IF expression THEN block END
    (31) if_statement -> . IF expression THEN block ELSE block END
    (32) while_loop -> . WHILE expression block
    (33) for_loop -> . FOR LPAREN assignment expression SEMICOLON assignment RPAREN block
    (58) function_call -> . ID LPAREN arg_list RPAREN
    (63) return_statement -> . RETURN expression SEMICOLON
    (64) output_statement -> . OUTPUT expression SEMICOLON
    (57) array_access -> . ID LBRACKET expression RBRACKET

    $end            reduce using rule 1 (program -> declarations .)
    TYPE            shift and go to state 7
    FUNCTION        shift and go to state 9
    ID              shift and go to state 8
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    FOR             shift and go to state 20
    RETURN          shift and go to state 21
    OUTPUT          shift and go to state 22

    declaration                    shift and go to state 23
    var_declaration                shift and go to state 4
    function_declaration           shift and go to state 5
    statement                      shift and go to state 6
    assignment                     shift and go to state 10
    if_statement                   shift and go to state 11
    while_loop                     shift and go to state 12
    for_loop                       shift and go to state 13
    function_call                  shift and go to state 14
    return_statement               shift and go to state 15
    output_statement               shift and go to state 16
    array_access                   shift and go to state 17

state 3

    (2) declarations -> declaration .

    TYPE            reduce using rule 2 (declarations -> declaration .)
    FUNCTION        reduce using rule 2 (declarations -> declaration .)
    ID              reduce using rule 2 (declarations -> declaration .)
    IF              reduce using rule 2 (declarations -> declaration .)
    WHILE           reduce using rule 2 (declarations -> declaration .)
    FOR             reduce using rule 2 (declarations -> declaration .)
    RETURN          reduce using rule 2 (declarations -> declaration .)
    OUTPUT          reduce using rule 2 (declarations -> declaration .)
    $end            reduce using rule 2 (declarations -> declaration .)


state 4

    (4) declaration -> var_declaration .
    (20) statement -> var_declaration .

  ! reduce/reduce conflict for TYPE resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for FUNCTION resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for ID resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for IF resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for WHILE resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for FOR resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for RETURN resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for OUTPUT resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for $end resolved using rule 4 (declaration -> var_declaration .)
    TYPE            reduce using rule 4 (declaration -> var_declaration .)
    FUNCTION        reduce using rule 4 (declaration -> var_declaration .)
    ID              reduce using rule 4 (declaration -> var_declaration .)
    IF              reduce using rule 4 (declaration -> var_declaration .)
    WHILE           reduce using rule 4 (declaration -> var_declaration .)
    FOR             reduce using rule 4 (declaration -> var_declaration .)
    RETURN          reduce using rule 4 (declaration -> var_declaration .)
    OUTPUT          reduce using rule 4 (declaration -> var_declaration .)
    $end            reduce using rule 4 (declaration -> var_declaration .)

  ! TYPE            [ reduce using rule 20 (statement -> var_declaration .) ]
  ! FUNCTION        [ reduce using rule 20 (statement -> var_declaration .) ]
  ! ID              [ reduce using rule 20 (statement -> var_declaration .) ]
  ! IF              [ reduce using rule 20 (statement -> var_declaration .) ]
  ! WHILE           [ reduce using rule 20 (statement -> var_declaration .) ]
  ! FOR             [ reduce using rule 20 (statement -> var_declaration .) ]
  ! RETURN          [ reduce using rule 20 (statement -> var_declaration .) ]
  ! OUTPUT          [ reduce using rule 20 (statement -> var_declaration .) ]
  ! $end            [ reduce using rule 20 (statement -> var_declaration .) ]


state 5

    (5) declaration -> function_declaration .

    TYPE            reduce using rule 5 (declaration -> function_declaration .)
    FUNCTION        reduce using rule 5 (declaration -> function_declaration .)
    ID              reduce using rule 5 (declaration -> function_declaration .)
    IF              reduce using rule 5 (declaration -> function_declaration .)
    WHILE           reduce using rule 5 (declaration -> function_declaration .)
    FOR             reduce using rule 5 (declaration -> function_declaration .)
    RETURN          reduce using rule 5 (declaration -> function_declaration .)
    OUTPUT          reduce using rule 5 (declaration -> function_declaration .)
    $end            reduce using rule 5 (declaration -> function_declaration .)


state 6

    (6) declaration -> statement .

    TYPE            reduce using rule 6 (declaration -> statement .)
    FUNCTION        reduce using rule 6 (declaration -> statement .)
    ID              reduce using rule 6 (declaration -> statement .)
    IF              reduce using rule 6 (declaration -> statement .)
    WHILE           reduce using rule 6 (declaration -> statement .)
    FOR             reduce using rule 6 (declaration -> statement .)
    RETURN          reduce using rule 6 (declaration -> statement .)
    OUTPUT          reduce using rule 6 (declaration -> statement .)
    $end            reduce using rule 6 (declaration -> statement .)


state 7

    (7) var_declaration -> TYPE . ID ASSIGN expression SEMICOLON
    (8) var_declaration -> TYPE . ID LBRACKET NUMBER RBRACKET SEMICOLON

    ID              shift and go to state 24


state 8

    (28) assignment -> ID . ASSIGN expression SEMICOLON
    (58) function_call -> ID . LPAREN arg_list RPAREN
    (57) array_access -> ID . LBRACKET expression RBRACKET

    ASSIGN          shift and go to state 25
    LPAREN          shift and go to state 26
    LBRACKET        shift and go to state 27


state 9

    (9) function_declaration -> FUNCTION . ID LPAREN param_list RPAREN TYPE block

    ID              shift and go to state 28


state 10

    (21) statement -> assignment .

    TYPE            reduce using rule 21 (statement -> assignment .)
    FUNCTION        reduce using rule 21 (statement -> assignment .)
    ID              reduce using rule 21 (statement -> assignment .)
    IF              reduce using rule 21 (statement -> assignment .)
    WHILE           reduce using rule 21 (statement -> assignment .)
    FOR             reduce using rule 21 (statement -> assignment .)
    RETURN          reduce using rule 21 (statement -> assignment .)
    OUTPUT          reduce using rule 21 (statement -> assignment .)
    $end            reduce using rule 21 (statement -> assignment .)
    RBRACE          reduce using rule 21 (statement -> assignment .)


state 11

    (22) statement -> if_statement .

    TYPE            reduce using rule 22 (statement -> if_statement .)
    FUNCTION        reduce using rule 22 (statement -> if_statement .)
    ID              reduce using rule 22 (statement -> if_statement .)
    IF              reduce using rule 22 (statement -> if_statement .)
    WHILE           reduce using rule 22 (statement -> if_statement .)
    FOR             reduce using rule 22 (statement -> if_statement .)
    RETURN          reduce using rule 22 (statement -> if_statement .)
    OUTPUT          reduce using rule 22 (statement -> if_statement .)
    $end            reduce using rule 22 (statement -> if_statement .)
    RBRACE          reduce using rule 22 (statement -> if_statement .)


state 12

    (23) statement -> while_loop .

    TYPE            reduce using rule 23 (statement -> while_loop .)
    FUNCTION        reduce using rule 23 (statement -> while_loop .)
    ID              reduce using rule 23 (statement -> while_loop .)
    IF              reduce using rule 23 (statement -> while_loop .)
    WHILE           reduce using rule 23 (statement -> while_loop .)
    FOR             reduce using rule 23 (statement -> while_loop .)
    RETURN          reduce using rule 23 (statement -> while_loop .)
    OUTPUT          reduce using rule 23 (statement -> while_loop .)
    $end            reduce using rule 23 (statement -> while_loop .)
    RBRACE          reduce using rule 23 (statement -> while_loop .)


state 13

    (24) statement -> for_loop .

    TYPE            reduce using rule 24 (statement -> for_loop .)
    FUNCTION        reduce using rule 24 (statement -> for_loop .)
    ID              reduce using rule 24 (statement -> for_loop .)
    IF              reduce using rule 24 (statement -> for_loop .)
    WHILE           reduce using rule 24 (statement -> for_loop .)
    FOR             reduce using rule 24 (statement -> for_loop .)
    RETURN          reduce using rule 24 (statement -> for_loop .)
    OUTPUT          reduce using rule 24 (statement -> for_loop .)
    $end            reduce using rule 24 (statement -> for_loop .)
    RBRACE          reduce using rule 24 (statement -> for_loop .)


state 14

    (25) statement -> function_call . SEMICOLON

    SEMICOLON       shift and go to state 29


state 15

    (26) statement -> return_statement .

    TYPE            reduce using rule 26 (statement -> return_statement .)
    FUNCTION        reduce using rule 26 (statement -> return_statement .)
    ID              reduce using rule 26 (statement -> return_statement .)
    IF              reduce using rule 26 (statement -> return_statement .)
    WHILE           reduce using rule 26 (statement -> return_statement .)
    FOR             reduce using rule 26 (statement -> return_statement .)
    RETURN          reduce using rule 26 (statement -> return_statement .)
    OUTPUT          reduce using rule 26 (statement -> return_statement .)
    $end            reduce using rule 26 (statement -> return_statement .)
    RBRACE          reduce using rule 26 (statement -> return_statement .)


state 16

    (27) statement -> output_statement .

    TYPE            reduce using rule 27 (statement -> output_statement .)
    FUNCTION        reduce using rule 27 (statement -> output_statement .)
    ID              reduce using rule 27 (statement -> output_statement .)
    IF              reduce using rule 27 (statement -> output_statement .)
    WHILE           reduce using rule 27 (statement -> output_statement .)
    FOR             reduce using rule 27 (statement -> output_statement .)
    RETURN          reduce using rule 27 (statement -> output_statement .)
    OUTPUT          reduce using rule 27 (statement -> output_statement .)
    $end            reduce using rule 27 (statement -> output_statement .)
    RBRACE          reduce using rule 27 (statement -> output_statement .)


state 17

    (29) assignment -> array_access . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 30


state 18

    (30) if_statement -> IF . expression THEN block END
    (31) if_statement -> IF . expression THEN block ELSE block END
    (34) expression -> . logical_or
    (35) logical_or -> . logical_and
    (36) logical_or -> . logical_or EQUALS logical_and
    (37) logical_or -> . logical_or NOTEQUALS logical_and
    (38) logical_and -> . comparison
    (39) logical_and -> . logical_and GT comparison
    (40) logical_and -> . logical_and LT comparison
    (41) logical_and -> . logical_and GTE comparison
    (42) logical_and -> . logical_and LTE comparison
    (43) comparison -> . arithmetic
    (44) arithmetic -> . term
    (45) arithmetic -> . arithmetic PLUS term
    (46) arithmetic -> . arithmetic MINUS term
    (47) term -> . factor
    (48) term -> . term MULTIPLY factor
    (49) term -> . term DIVIDE factor
    (50) factor -> . NUMBER
    (51) factor -> . STRING
    (52) factor -> . BOOLEAN
    (53) factor -> . ID
    (54) factor -> . array_access
    (55) factor -> . function_call
    (56) factor -> . LPAREN expression RPAREN
    (57) array_access -> . ID LBRACKET expression RBRACKET
    (58) function_call -> . ID LPAREN arg_list RPAREN

    NUMBER          shift and go to state 38
    STRING          shift and go to state 39
    BOOLEAN         shift and go to state 40
    ID              shift and go to state 41
    LPAREN          shift and go to state 44

    expression                     shift and go to state 31
    logical_or                     shift and go to state 32
    logical_and                    shift and go to state 33
    comparison                     shift and go to state 34
    arithmetic                     shift and go to state 35
    term                           shift and go to state 36
    factor                         shift and go to state 37
    array_access                   shift and go to state 42
    function_call                  shift and go to state 43

state 19

    (32) while_loop -> WHILE . expression block
    (34) expression -> . logical_or
    (35) logical_or -> . logical_and
    (36) logical_or -> . logical_or EQUALS logical_and
    (37) logical_or -> . logical_or NOTEQUALS logical_and
    (38) logical_and -> . comparison
    (39) logical_and -> . logical_and GT comparison
    (40) logical_and -> . logical_and LT comparison
    (41) logical_and -> . logical_and GTE comparison
    (42) logical_and -> . logical_and LTE comparison
    (43) comparison -> . arithmetic
    (44) arithmetic -> . term
    (45) arithmetic -> . arithmetic PLUS term
    (46) arithmetic -> . arithmetic MINUS term
    (47) term -> . factor
    (48) term -> . term MULTIPLY factor
    (49) term -> . term DIVIDE factor
    (50) factor -> . NUMBER
    (51) factor -> . STRING
    (52) factor -> . BOOLEAN
    (53) factor -> . ID
    (54) factor -> . array_access
    (55) factor -> . function_call
    (56) factor -> . LPAREN expression RPAREN
    (57) array_access -> . ID LBRACKET expression RBRACKET
    (58) function_call -> . ID LPAREN arg_list RPAREN

    NUMBER          shift and go to state 38
    STRING          shift and go to state 39
    BOOLEAN         shift and go to state 40
    ID              shift and go to state 41
    LPAREN          shift and go to state 44

    expression                     shift and go to state 45
    logical_or                     shift and go to state 32
    logical_and                    shift and go to state 33
    comparison                     shift and go to state 34
    arithmetic                     shift and go to state 35
    term                           shift and go to state 36
    factor                         shift and go to state 37
    array_access                   shift and go to state 42
    function_call                  shift and go to state 43

state 20

    (33) for_loop -> FOR . LPAREN assignment expression SEMICOLON assignment RPAREN block

    LPAREN          shift and go to state 46


state 21

    (63) return_statement -> RETURN . expression SEMICOLON
    (34) expression -> . logical_or
    (35) logical_or -> . logical_and
    (36) logical_or -> . logical_or EQUALS logical_and
    (37) logical_or -> . logical_or NOTEQUALS logical_and
    (38) logical_and -> . comparison
    (39) logical_and -> . logical_and GT comparison
    (40) logical_and -> . logical_and LT comparison
    (41) logical_and -> . logical_and GTE comparison
    (42) logical_and -> . logical_and LTE comparison
    (43) comparison -> . arithmetic
    (44) arithmetic -> . term
    (45) arithmetic -> . arithmetic PLUS term
    (46) arithmetic -> . arithmetic MINUS term
    (47) term -> . factor
    (48) term -> . term MULTIPLY factor
    (49) term -> . term DIVIDE factor
    (50) factor -> . NUMBER
    (51) factor -> . STRING
    (52) factor -> . BOOLEAN
    (53) factor -> . ID
    (54) factor -> . array_access
    (55) factor -> . function_call
    (56) factor -> . LPAREN expression RPAREN
    (57) array_access -> . ID LBRACKET expression RBRACKET
    (58) function_call -> . ID LPAREN arg_list RPAREN

    NUMBER          shift and go to state 38
    STRING          shift and go to state 39
    BOOLEAN         shift and go to state 40
    ID              shift and go to state 41
    LPAREN          shift and go to state 44

    expression                     shift and go to state 47
    logical_or                     shift and go to state 32
    logical_and                    shift and go to state 33
    comparison                     shift and go to state 34
    arithmetic                     shift and go to state 35
    term                           shift and go to state 36
    factor                         shift and go to state 37
    array_access                   shift and go to state 42
    function_call                  shift and go to state 43

state 22

    (64) output_statement -> OUTPUT . expression SEMICOLON
    (34) expression -> . logical_or
    (35) logical_or -> . logical_and
    (36) logical_or -> . logical_or EQUALS logical_and
    (37) logical_or -> . logical_or NOTEQUALS logical_and
    (38) logical_and -> . comparison
    (39) logical_and -> . logical_and GT comparison
    (40) logical_and -> . logical_and LT comparison
    (41) logical_and -> . logical_and GTE comparison
    (42) logical_and -> . logical_and LTE comparison
    (43) comparison -> . arithmetic
    (44) arithmetic -> . term
    (45) arithmetic -> . arithmetic PLUS term
    (46) arithmetic -> . arithmetic MINUS term
    (47) term -> . factor
    (48) term -> . term MULTIPLY factor
    (49) term -> . term DIVIDE factor
    (50) factor -> . NUMBER
    (51) factor -> . STRING
    (52) factor -> . BOOLEAN
    (53) factor -> . ID
    (54) factor -> . array_access
    (55) factor -> . function_call
    (56) factor -> . LPAREN expression RPAREN
    (57) array_access -> . ID LBRACKET expression RBRACKET
    (58) function_call -> . ID LPAREN arg_list RPAREN

    NUMBER          shift and go to state 38
    STRING          shift and go to state 39
    BOOLEAN         shift and go to state 40
    ID              shift and go to state 41
    LPAREN          shift and go to state 44

    expression                     shift and go to state 48
    logical_or                     shift and go to state 32
    logical_and                    shift and go to state 33
    comparison                     shift and go to state 34
    arithmetic                     shift and go to state 35
    term                           shift and go to state 36
    factor                         shift and go to state 37
    array_access                   shift and go to state 42
    function_call                  shift and go to state 43

state 23

    (3) declarations -> declarations declaration .

    TYPE            reduce using rule 3 (declarations -> declarations declaration .)
    FUNCTION        reduce using rule 3 (declarations -> declarations declaration .)
    ID              reduce using rule 3 (declarations -> declarations declaration .)
    IF              reduce using rule 3 (declarations -> declarations declaration .)
    WHILE           reduce using rule 3 (declarations -> declarations declaration .)
    FOR             reduce using rule 3 (declarations -> declarations declaration .)
    RETURN          reduce using rule 3 (declarations -> declarations declaration .)
    OUTPUT          reduce using rule 3 (declarations -> declarations declaration .)
    $end            reduce using rule 3 (declarations -> declarations declaration .)


state 24

    (7) var_declaration -> TYPE ID . ASSIGN expression SEMICOLON
    (8) var_declaration -> TYPE ID . LBRACKET NUMBER RBRACKET SEMICOLON

    ASSIGN          shift and go to state 49
    LBRACKET        shift and go to state 50


state 25

    (28) assignment -> ID ASSIGN . expression SEMICOLON
    (34) expression -> . logical_or
    (35) logical_or -> . logical_and
    (36) logical_or -> . logical_or EQUALS logical_and
    (37) logical_or -> . logical_or NOTEQUALS logical_and
    (38) logical_and -> . comparison
    (39) logical_and -> . logical_and GT comparison
    (40) logical_and -> . logical_and LT comparison
    (41) logical_and -> . logical_and GTE comparison
    (42) logical_and -> . logical_and LTE comparison
    (43) comparison -> . arithmetic
    (44) arithmetic -> . term
    (45) arithmetic -> . arithmetic PLUS term
    (46) arithmetic -> . arithmetic MINUS term
    (47) term -> . factor
    (48) term -> . term MULTIPLY factor
    (49) term -> . term DIVIDE factor
    (50) factor -> . NUMBER
    (51) factor -> . STRING
    (52) factor -> . BOOLEAN
    (53) factor -> . ID
    (54) factor -> . array_access
    (55) factor -> . function_call
    (56) factor -> . LPAREN expression RPAREN
    (57) array_access -> . ID LBRACKET expression RBRACKET
    (58) function_call -> . ID LPAREN arg_list RPAREN

    NUMBER          shift and go to state 38
    STRING          shift and go to state 39
    BOOLEAN         shift and go to state 40
    ID              shift and go to state 41
    LPAREN          shift and go to state 44

    expression                     shift and go to state 51
    logical_or                     shift and go to state 32
    logical_and                    shift and go to state 33
    comparison                     shift and go to state 34
    arithmetic                     shift and go to state 35
    term                           shift and go to state 36
    factor                         shift and go to state 37
    array_access                   shift and go to state 42
    function_call                  shift and go to state 43

state 26

    (58) function_call -> ID LPAREN . arg_list RPAREN
    (59) arg_list -> .
    (60) arg_list -> . arg_list_not_empty
    (61) arg_list_not_empty -> . expression
    (62) arg_list_not_empty -> . arg_list_not_empty COMMA expression
    (34) expression -> . logical_or
    (35) logical_or -> . logical_and
    (36) logical_or -> . logical_or EQUALS logical_and
    (37) logical_or -> . logical_or NOTEQUALS logical_and
    (38) logical_and -> . comparison
    (39) logical_and -> . logical_and GT comparison
    (40) logical_and -> . logical_and LT comparison
    (41) logical_and -> . logical_and GTE comparison
    (42) logical_and -> . logical_and LTE comparison
    (43) comparison -> . arithmetic
    (44) arithmetic -> . term
    (45) arithmetic -> . arithmetic PLUS term
    (46) arithmetic -> . arithmetic MINUS term
    (47) term -> . factor
    (48) term -> . term MULTIPLY factor
    (49) term -> . term DIVIDE factor
    (50) factor -> . NUMBER
    (51) factor -> . STRING
    (52) factor -> . BOOLEAN
    (53) factor -> . ID
    (54) factor -> . array_access
    (55) factor -> . function_call
    (56) factor -> . LPAREN expression RPAREN
    (57) array_access -> . ID LBRACKET expression RBRACKET
    (58) function_call -> . ID LPAREN arg_list RPAREN

    RPAREN          reduce using rule 59 (arg_list -> .)
    NUMBER          shift and go to state 38
    STRING          shift and go to state 39
    BOOLEAN         shift and go to state 40
    ID              shift and go to state 41
    LPAREN          shift and go to state 44

    arg_list                       shift and go to state 52
    arg_list_not_empty             shift and go to state 53
    expression                     shift and go to state 54
    logical_or                     shift and go to state 32
    logical_and                    shift and go to state 33
    comparison                     shift and go to state 34
    arithmetic                     shift and go to state 35
    term                           shift and go to state 36
    factor                         shift and go to state 37
    array_access                   shift and go to state 42
    function_call                  shift and go to state 43

state 27

    (57) array_access -> ID LBRACKET . expression RBRACKET
    (34) expression -> . logical_or
    (35) logical_or -> . logical_and
    (36) logical_or -> . logical_or EQUALS logical_and
    (37) logical_or -> . logical_or NOTEQUALS logical_and
    (38) logical_and -> . comparison
    (39) logical_and -> . logical_and GT comparison
    (40) logical_and -> . logical_and LT comparison
    (41) logical_and -> . logical_and GTE comparison
    (42) logical_and -> . logical_and LTE comparison
    (43) comparison -> . arithmetic
    (44) arithmetic -> . term
    (45) arithmetic -> . arithmetic PLUS term
    (46) arithmetic -> . arithmetic MINUS term
    (47) term -> . factor
    (48) term -> . term MULTIPLY factor
    (49) term -> . term DIVIDE factor
    (50) factor -> . NUMBER
    (51) factor -> . STRING
    (52) factor -> . BOOLEAN
    (53) factor -> . ID
    (54) factor -> . array_access
    (55) factor -> . function_call
    (56) factor -> . LPAREN expression RPAREN
    (57) array_access -> . ID LBRACKET expression RBRACKET
    (58) function_call -> . ID LPAREN arg_list RPAREN

    NUMBER          shift and go to state 38
    STRING          shift and go to state 39
    BOOLEAN         shift and go to state 40
    ID              shift and go to state 41
    LPAREN          shift and go to state 44

    expression                     shift and go to state 55
    logical_or                     shift and go to state 32
    logical_and                    shift and go to state 33
    comparison                     shift and go to state 34
    arithmetic                     shift and go to state 35
    term                           shift and go to state 36
    factor                         shift and go to state 37
    array_access                   shift and go to state 42
    function_call                  shift and go to state 43

state 28

    (9) function_declaration -> FUNCTION ID . LPAREN param_list RPAREN TYPE block

    LPAREN          shift and go to state 56


state 29

    (25) statement -> function_call SEMICOLON .

    TYPE            reduce using rule 25 (statement -> function_call SEMICOLON .)
    FUNCTION        reduce using rule 25 (statement -> function_call SEMICOLON .)
    ID              reduce using rule 25 (statement -> function_call SEMICOLON .)
    IF              reduce using rule 25 (statement -> function_call SEMICOLON .)
    WHILE           reduce using rule 25 (statement -> function_call SEMICOLON .)
    FOR             reduce using rule 25 (statement -> function_call SEMICOLON .)
    RETURN          reduce using rule 25 (statement -> function_call SEMICOLON .)
    OUTPUT          reduce using rule 25 (statement -> function_call SEMICOLON .)
    $end            reduce using rule 25 (statement -> function_call SEMICOLON .)
    RBRACE          reduce using rule 25 (statement -> function_call SEMICOLON .)


state 30

    (29) assignment -> array_access ASSIGN . expression SEMICOLON
    (34) expression -> . logical_or
    (35) logical_or -> . logical_and
    (36) logical_or -> . logical_or EQUALS logical_and
    (37) logical_or -> . logical_or NOTEQUALS logical_and
    (38) logical_and -> . comparison
    (39) logical_and -> . logical_and GT comparison
    (40) logical_and -> . logical_and LT comparison
    (41) logical_and -> . logical_and GTE comparison
    (42) logical_and -> . logical_and LTE comparison
    (43) comparison -> . arithmetic
    (44) arithmetic -> . term
    (45) arithmetic -> . arithmetic PLUS term
    (46) arithmetic -> . arithmetic MINUS term
    (47) term -> . factor
    (48) term -> . term MULTIPLY factor
    (49) term -> . term DIVIDE factor
    (50) factor -> . NUMBER
    (51) factor -> . STRING
    (52) factor -> . BOOLEAN
    (53) factor -> . ID
    (54) factor -> . array_access
    (55) factor -> . function_call
    (56) factor -> . LPAREN expression RPAREN
    (57) array_access -> . ID LBRACKET expression RBRACKET
    (58) function_call -> . ID LPAREN arg_list RPAREN

    NUMBER          shift and go to state 38
    STRING          shift and go to state 39
    BOOLEAN         shift and go to state 40
    ID              shift and go to state 41
    LPAREN          shift and go to state 44
